[project]
name = "graham-essays"
version = "0.1.0"
description = "Download and export the Paul Graham essays collection."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4",
    "dateparser",
    "html2text",
    "htmldate",
    "regex",
    "requests",
    "typer",
]

[project.scripts]
graham-essays = "graham_essays.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graham_essays"]
